kustomize/globex/cluster-ns-globex-apim-user1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: globex-apim-user1
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
