kustomize/globex/globex-deployment-globex-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globex-db
  namespace: globex-apim-user1
  labels:
    app: globex-db
    app.kubernetes.io/name: globex-db
    app.kubernetes.io/part-of: globex
    app.openshift.io/runtime: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: globex-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: globex-db
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: globex-db
      containers:
        - name: postgresql
          image: quay.io/cloud-architecture-workshop/globex-store-db:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            timeoutSeconds: 1
            initialDelaySeconds: 5
            tcpSocket:
              port: 5432
          readinessProbe:
            timeoutSeconds: 1
            initialDelaySeconds: 5
            exec:
              command:
                - "/bin/sh"
                - "-i"
                - "-c"
                - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c 'SELECT 1'
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
