kustomize/globex/globex-deployment-globex-mobile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globex-mobile
  namespace: globex-apim-user1
  labels:
    app: globex-mobile
    app.kubernetes.io/name: globex-mobile
    app.kubernetes.io/part-of: globex
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: globex-mobile
  template:
    metadata:
      labels:
        app: globex-mobile
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: globex-mobile
      containers:
        - name: globex-mobile
          image: quay.io/laurenttourreau/globex-mobile:rhbk26-fixed
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: app-files
              mountPath: /opt/app-root/src/dist/globex-mobile/browser
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: app-files
          emptyDir: {}
