kustomize/globex/globex-deployment-globex-store-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globex-store-app
  namespace: globex-apim-user1
  labels:
    app: globex-store-app
    app.kubernetes.io/name: globex-store-app
    app.kubernetes.io/part-of: globex
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: globex-store-app
  template:
    metadata:
      labels:
        app: globex-store-app
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: globex-store-app
      containers:
        - name: globex-store-app
          image: quay.io/laurenttourreau/globex-store:npe-fixed
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 200m
              memory: 250Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
