kustomize/globex/globex-service-globex-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: globex-db
  namespace: globex-apim-user1
  labels:
    app: globex-db
    app.kubernetes.io/name: globex-db
    app.kubernetes.io/part-of: globex
spec:
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: globex-db
  type: ClusterIP
