kustomize/globex/globex-service-globex-store-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: globex-store-app
  namespace: globex-apim-user1
  labels:
    app: globex-store-app
    app.kubernetes.io/name: globex-store-app
    app.kubernetes.io/part-of: globex
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: globex-store-app
  type: ClusterIP
