kustomize/globex/globex-route-globex-mobile.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: globex-mobile
  namespace: globex-apim-user1
  labels:
    app: globex-mobile
    app.kubernetes.io/name: globex-mobile
    app.kubernetes.io/part-of: globex
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: globex-mobile
    weight: 100
  wildcardPolicy: None
